3. reset method- 2024/05/29
4. commit throws exception - 2024/05/30
5. new method getLocalCommitIdListByFilePath - 2024/06/08
6. new lib(org.eclipse.jgit.archive-6.6.1) & new backup method - 2024/06/09
7. fix bug in CreateXLS , and make shiftrows method deprecated in CreateXLSX - 20240916

v3.3p1(released)
--
AppEncryptPDF rename AppProtectPDF - 2023/03/10

v3.3(released)
--
add Version.java - 2023/03/09

v3.2b2(not released yet)
--
1. GitUtil Bugs Fix - 2022/10/06
2. org.eclipse.jgit-6.3.0.202209071007  packages  - 2022/10/06
3. GitUtil add clone shallow (depth) - 2022/10/07

v3.2b2(not released yet)
--
1. new JasperDesignManager class to handle design xml file - 2022/04/10
2. change test file directory from tmp to opt - 2022/04/12
3. poi bump to 5.2.2 , xmlbean 5 , log4j 2.1.7 - 2022/04/19
    try to add autoSizeColumn for excel but ... 
 
v3.2b1(not released yet)
--
1. poi bump to 5.0.0
2. add word package 
3. fix cell style exceeds 64000 limit 2021/10/14


v3.1p5(not release)
--

v3.1p4 - 2020/02/06
--
1. add close in GitUtil - 2019/09/08(v3.1p3)
2. add removeLocalGitRepository in GitUtil - 2019/09/13
3. add commit in GitUtil - 2019/09/14
4. method update() in GitUtil changed to pull() - 2019/09/14
5. add push() in GitUtil - 2019/09/14
6. add commit author name and email - 2019/09/15
7. add createLocalRepository method in GitUtil - 2019/09/20
8. add some methods in GitUtil - 2019/09/28
9. get all remote branch in GitUtil - 2019/09/30
10. checkout local branch in GitUtil - 2019/09/30
11. CreateXLSX performance tuning - 2020/02/06
    poi update to 3.17
    
v3.1p2 - 2019/05/28
--
1. jgit library downgrade to version 4.5 (compatible with android p)

v3.1 - 2019/03/04
--
1. Update itext7 library to 7.0.4 - 2017/07/26
2. New class "EncryptPDF" that can encrypt PDF and hide PDF tool bar - 2017/12/01
3. New class AppEncryptPDF that use swing GUI(use i18n properties) - 2017/12/06
4. add xbean.jar to handle xml exception (create excel) - 2018/10/15